fixed new game form not wrapping

--- a/play/index.css
+++ b/play/index.css
@@ -56,6 +56,7 @@ a {
 	justify-content: center;
 	align-items: baseline;
 	gap: 8px;
+	flex-wrap: wrap;
 }
 
 #new-game-form button {
